# Physical-Design

./: tags
b04901035-p2-v1/pa2/: .gitignore  .nfs000000030e09c67e0000014a  .nfs000000030e09c6910000014e  CMakeLists.txt  README.txt  gr  report.doc
b04901035-p2-v1/pa2/input/: a6.gr
b04901035-p2-v1/pa2/output/: example.out
b04901035-p2-v1/pa2/src/dataStructure/: .disjointSet.hpp.swp  .kdtree.hpp.swp  kdtree.hpp  pqueue.hpp
b04901035-p2-v1/pa2/src/db/: .capacityTable.cpp.swp  .capacityTable.hpp.swp  .db.cpp.swp  .db.hpp.swp  .net.cpp.swp  .net.hpp.swp  .nfs000000002bf382550000015b  capacityTable.cpp  capacityTable.hpp  db.hpp  net.cpp
b04901035-p2-v1/pa2/src/dr/: .drAstar.cpp.swp  .drAstar.hpp.swp  .nfs0000000102ff053c0000015d  .nfs0000000102ff053d0000015c  drAstar.cpp  drAstar.hpp
b04901035-p2-v1/pa2/src/main/: .main.cpp.swp  .nfs000000024008c96a0000015e  ds.cpp  main.cpp  test.cpp
b04901035-p2-v1/pa2/src/parser/: .parser.hpp.swp  io.hpp  parser.hpp  tree.cpp  tree.hpp
chen/: readme.txt
chen/src/db/: .capacityTable.hpp.swp  .db.hpp.swp  .net.hpp.swp  capacityTable.hpp  db.hpp  net.hpp
chen/src/dr/: .drAstar.cpp.swp  .drAstar.hpp.swp  drAstar.cpp  drAstar.hpp
chen/src/main/: .main.cpp.swp
chen/src/parser/: mst.cpp  routingdb.cpp  routingdb.hpp
pa1/: .CMakeLists.txt.swp  .gitignore  CMakeLists.txt  eval.sh  fm  readme.txt  report.docx  run.sh  test
pa1/input/: .input_test.dat.swp
pa1/src/data/: .cell.hpp.swp  .data.cpp.swp  .data.hpp.swp  .net.hpp.swp  cell.hpp  data.cpp  data.hpp  net.cpp  net.hpp
pa1/src/fm/: .bucketList.cpp.swp  .bucketList.hpp.swp  .fm.cpp.swp  .fm.hpp.swp  bucketList.cpp  bucketList.hpp  fm.cpp  fm.hpp
pa1/src/main/: .main.cpp.swp  .test.cpp.swp  main.cpp  test.cpp
pa1/src/misc/: .global.hpp.swp  global.cpp  global.hpp
pa1/src/parser/: .parser.cpp.swp  .parser.hpp.swp  parser.cpp  parser.hpp
pa2/: .CMakeLists.txt.swp  .gitignore  CMakeLists.txt  eval.sh  gr  run.sh
pa2/output/: a6.out  example.out
pa2/src/dataStructure/: .disjointSet.hpp.swp  .kdtree.hpp.swp  disjointSet.hpp  kdtree.hpp  pqueue.hpp
pa2/src/db/: .capacityTable.cpp.swp  .capacityTable.hpp.swp  .db.cpp.swp  .db.hpp.swp  .net.cpp.swp  .net.hpp.swp  .point.hpp.swp  .segment.hpp.swp  capacityTable.cpp  capacityTable.hpp  db.cpp  db.hpp  dbGlobal.hpp  net.cpp  net.hpp  point.hpp  segment.hpp
pa2/src/dr/: .drAstar.cpp.swp  .drAstar.hpp.swp  drAstar.cpp  drAstar.hpp
pa2/src/main/: .main.cpp.swp  .test.cpp.swp  main.cpp
pa2/src/misc/: .global.hpp.swp  global.hpp
pa2/src/parser/: .parser.hpp.swp  .routingdb.cpp.swp  io.cpp  parser.hpp  tree.cpp
pa3/: .CMakeLists.txt.swp  .eval.sh.swp  .gitignore  .run.sh.swp  .visualize.py.swp  CMakeLists.txt  bstar  eval.sh  gdb.sh  readme.txt  report.docx  run.sh  visualize.py
pa3/input/: input.block
pa3/src/: '
pa3/src/argparse/: argparse.cpp  argparse.hpp
pa3/src/bstar/: .bstar.cpp.swp  .bstar.hpp.swp  .state.cpp.swp  .state.hpp.swp  bstar.cpp  bstar.hpp  bstarGlobal.hpp  state.cpp  state.hpp
pa3/src/dataStructure/: dsGlobal.hpp  hash.hpp
pa3/src/db/: .block.cpp.swp  .block.hpp.swp  .db.cpp.swp  .db.hpp.swp  .net.hpp.swp  .rect.cpp.swp  .rect.hpp.swp  .terminal.hpp.swp  block.cpp  block.hpp  db.cpp  db.hpp  net.cpp  net.hpp  point.hpp  rect.cpp  rect.hpp  terminal.cpp  terminal.hpp
pa3/src/main/: .main.cpp.swp  main.cpp
pa3/src/misc/: .global.hpp.swp  global.hpp
pa3/src/parser/: parser.cpp  parser.hpp
pa3/tool/checker/: example.block  example.rpt
